# kalinin-tcp-console-game

./: CMakeLists.txt  LICENSE.md  README.md  REPORT.md
client/: CMakeLists.txt  client.cpp  client.h  input_interface.cpp  input_interface.h  inteface_manager.cpp  interface_manager.h  main.cpp  output_interface.cpp  output_interface.h  painter.cpp  painter.h  screen_buffer.cpp  screen_buffer.h  terminal_manager.cpp  terminal_manager.h
client/interfaces/: input_interface.cpp  input_interface.h  inteface_manager.cpp  interface_manager.h  output_interface.cpp  output_interface.h
lib/: CMakeLists.txt  direction.h  game_settings.cpp  game_settings.h  player_info.cpp  player_info.h  room_info.cpp  room_info.h  send_command.h  send_command_impl.h  sleep.h  tcp_connection.h  tcp_utilities.cpp  tcp_utilities.h
lib/game_lib/: game.cpp  game.h  game_map.cpp  game_map.h  map_point.cpp  map_point.h
lib/game_lib/game_objects/: game_object.cpp  game_object.h  health_pack_game_object.cpp  health_pack_game_object.h  mine_game_object.cpp  mine_game_object.h  player_game_object.cpp  player_game_object.h  projectile_game_object.cpp  projectile_game_object.h  void_game_object.cpp  void_game_object.h  wall_game_object.cpp  wall_game_object.h
lib/info_structures/: game_info.cpp  game_info.h  game_map_info.cpp  game_map_info.h  info_structure.h  player_info.cpp  player_info.h  player_object_info.cpp  player_object_info.h  room_info.cpp  room_info.h
lib/network_utilities/: send_command.h  tcp_utilities.cpp  tcp_utilities.h
lib/unused_ideas/: event_tree.cpp  event_tree.h
server/: CMakeLists.txt  io_context.cpp  io_context.h  main.cpp  room.cpp  room.h  server.cpp  server.h  server_settings
